--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "lambda": {
     "function_name_downsize_media": "downsize_media",
+    "function_name_downsize_video": "downsize_video",
     "function_name_extract_audio": "extract_audio",
     "function_name_merge_frames": "merge_frames",
     "function_name_process_frames": "process_frames"
