--- a/lambdas/downsize_video/Dockerfile
+++ b/lambdas/downsize_video/Dockerfile
@@ -1,6 +1,6 @@
-FROM --platform=linux/amd64 public.ecr.aws/lambda/python:3.12
+FROM public.ecr.aws/lambda/python:3.12
 
-RUN yum update --assumeyes && yum install ffmpeg libsm6 libxext6 libgl1 mesa-libGL ImageMagick ImageMagick-devel  -y
+# RUN yum update --assumeyes && yum install ffmpeg libsm6 libxext6 libgl1 mesa-libGL ImageMagick ImageMagick-devel  -y
 
 COPY downsize_video/requirements.txt .
 RUN pip install --no-cache-dir -r ./requirements.txt
