--- a/lambdas/downsize_video/requirements.txt
+++ b/lambdas/downsize_video/requirements.txt
@@ -2,4 +2,4 @@ pillow==10.3.0
 opencv-contrib-python-headless==4.10.0.84
 numpy==1.26.4
 lambda_multiprocessing==0.5
-moviepy==1.0.3
+moviepy==2.0.0.dev2
