--- a/lambdas/merge_frames/Dockerfile
+++ b/lambdas/merge_frames/Dockerfile
@@ -4,7 +4,11 @@ RUN dnf update -y && \
   dnf install -y \
   python3.11 \
   python3.11-pip \
+  python3.11-devel \
   gcc \
+  cairo \
+  cairo-devel \
+  pkgconfig \
   git \
   unzip \
   xz \
