--- a/lambdas/process_frames/Dockerfile
+++ b/lambdas/process_frames/Dockerfile
@@ -1,5 +1,14 @@
 FROM public.ecr.aws/lambda/python:3.12
 
+RUN dnf update -y && \
+  dnf install -y \
+  python3-devel \
+  gcc \
+  cairo \
+  cairo-devel \
+  pkgconfig \
+  gcc
+
 COPY process_frames/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
