--- a/lambdas/process_frames/Dockerfile
+++ b/lambdas/process_frames/Dockerfile
@@ -14,6 +14,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY *.py ./lambdas/
 
+COPY process_frames/consolas.ttf .
 COPY process_frames/lambda_function.py ./lambdas/process_frames/lambda_function.py
 COPY process_frames/modules ./lambdas/process_frames/modules
 
